<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TwoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="#101211"
            android:backgroundTint="#101211"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/courses_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-3dp"
                        android:layout_marginRight="@dimen/text_margin"
                        android:src="@drawable/ic_baseline_computer_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Computer Science and Engineering (AI-ML)"
                        android:id="@+id/course_title"
                        android:textSize="@dimen/title_size2"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#F68829"
                        android:fontFamily="@string/bold"/>




                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Course"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center"
                    android:textColor="#A367F8"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:id="@+id/course_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/regular"
                    android:text="@string/cse_ai_ml_des"
                    android:textColor="#11C2D3"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scope"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center"
                    android:textColor="#F44336"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cse_ai_ml_scope"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#e3d0d0"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:fontFamily="@string/regular"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</FrameLayout>