<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="2dp"
    app:cardElevation="4dp"
    android:background="@color/grey"
    app:cardCornerRadius="30dp"
    android:backgroundTint="@color/grey2"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/courses_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_baseline_computer_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Computer Science and Engineering"
                android:id="@+id/course_title"
                android:textSize="@dimen/title_size2"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@string/bold"/>




        </LinearLayout>

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Course"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center"
            android:textColor="@color/teal_700"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/bold"/>-->

        <TextView
            android:id="@+id/course_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:text="@string/cse_description"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scope"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center"
            android:textColor="#F44336"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_scope"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/teal_700"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:fontFamily="@string/light"/>

-->
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>